@startuml

/'
    Simple UML (Unified Modeling Language)
'/

skinparam titleBorderRoundCorner 20
skinparam titleBorderThickness 2
skinparam titleBorderColor #A80036
skinparam titleBackgroundColor white

title Stack & Queue

interface OrderObjectListInterface
{
    .. Getters ..
    + push($item): OrderObjectListInterface
    + peek()
    + getStackItems(): array
    + setStackItems(array $items): OrderObjectListInterface
    + reverseStack(): OrderObjectListInterface
    + isEmpty(): bool
}

interface Countable
{
    .. Getters ..
    + count(): int
}

interface ArrayAccess
{
    .. Getters ..
    + offsetGet($offset)

    .. Setters ..
    + offsetSet($offset, $value): AbstractOrderedObjectSequence
    + offsetUnset($offset): AbstractOrderedObjectSequence

    .. Other Methods ..
    + offsetExists($offset): bool
}

abstract class AbstractOrderedObjectSequence
{
    .. Protected Properties ..
    # items: array
    # count: int

    .. Getters ..
    + push($item): OrderObjectListInterface
    + peek()
    + getStackItems(): array
    + setStackItems(array $items): OrderObjectListInterface
    + reverseStack(): OrderObjectListInterface
    + isEmpty(): bool
    + count(): int
}

interface StackInterface
{
    .. Getters ..
    + lifoGenerator(): Generator
}

interface QueueInterface
{
    .. Getters ..
    + fifoGenerator(): Generator

    .. Other Methods ..
    + enqueue($item): QueueInterface
    + dequeue()
}

class Stack
{
    .. Getters ..
    + lifoGenerator(): Generator

    .. Other Methods ..
    + pop()
}

class Queue
{
    .. Getters ..
    + fifoGenerator(): Generator

    .. Other Methods ..
    + enqueue($item): QueueInterface
    + dequeue()
}

Countable <- AbstractOrderedObjectSequence
ArrayAccess <--- AbstractOrderedObjectSequence
OrderObjectListInterface <--- AbstractOrderedObjectSequence
AbstractOrderedObjectSequence <--- StackInterface
AbstractOrderedObjectSequence <--- QueueInterface
StackInterface <-- Stack
QueueInterface <-- Queue

@enduml
